--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
+    "axios": "^0.27.2",
+    "emailjs": "^4.0.0",
+    "file-saver": "^2.0.5",
+    "mongoose": "^6.3.1",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "8.12.0",
