--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.3",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "emailjs": "^4.0.0",
     "file-saver": "^2.0.5",
+    "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^6.3.1",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.1.4",
+    "next-auth": "^4.3.4",
+    "nodemailer": "^6.7.4",
     "react": "18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "18.0.0",
