--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.3",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.7.0",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
